# project-task-management-system

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py
backend/tests/: test_auth.py
